Разметка главной страницы
Разделы новые игры и избранное, подвал

--- a/index.html
+++ b/index.html
@@ -69,11 +69,44 @@
                   <span class="catalog-game-title">Название игры</span>
                 </h3>
                 <p class="catalog-game-image">
-                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" height="165" alt="Кто живет в лесу">
+                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" alt="Кто живет в лесу">
                 </p>
               </a>
               <p class="catalog-game-tags">Теги</p>
-              <p class="catalog-game-autor">Автор</p>
+              <div class="catalog-game-autor">
+                <img src="./img/avatar/001.png" width="20" alt="Кто живет в лесу">
+                <p>Автор</p>
+              </div>
+            </li>
+            <li class="catalog-game">
+              <a href="game.html">
+                <h3>
+                  <span class="catalog-game-title">Название игры</span>
+                </h3>
+                <p class="catalog-game-image">
+                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" alt="Кто живет в лесу">
+                </p>
+              </a>
+              <p class="catalog-game-tags">Теги</p>
+              <div class="catalog-game-autor">
+                <img src="./img/avatar/001.png" width="20" alt="Кто живет в лесу">
+                <p>Автор</p>
+              </div>
+            </li>
+            <li class="catalog-game">
+              <a href="game.html">
+                <h3>
+                  <span class="catalog-game-title">Название игры</span>
+                </h3>
+                <p class="catalog-game-image">
+                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" alt="Кто живет в лесу">
+                </p>
+              </a>
+              <p class="catalog-game-tags">Теги</p>
+              <div class="catalog-game-autor">
+                <img src="./img/avatar/001.png" width="20" alt="Кто живет в лесу">
+                <p>Автор</p>
+              </div>
             </li>
           </ul>
           <div>
@@ -83,11 +116,106 @@
         </section>
 
         <section class="new-games">
-
+          <h2>Новые игры</h2>
+          <ul class="catalog-list">
+            <li class="catalog-game">
+              <a href="game.html">
+                <h3>
+                  <span class="catalog-game-title">Название игры</span>
+                </h3>
+                <p class="catalog-game-image">
+                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" alt="Кто живет в лесу">
+                </p>
+              </a>
+              <p class="catalog-game-tags">Теги</p>
+              <div class="catalog-game-autor">
+                <img src="./img/avatar/001.png" width="20" alt="Кто живет в лесу">
+                <p>Автор</p>
+              </div>
+            </li>
+            <li class="catalog-game">
+              <a href="game.html">
+                <h3>
+                  <span class="catalog-game-title">Название игры</span>
+                </h3>
+                <p class="catalog-game-image">
+                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" alt="Кто живет в лесу">
+                </p>
+              </a>
+              <p class="catalog-game-tags">Теги</p>
+              <div class="catalog-game-autor">
+                <img src="./img/avatar/001.png" width="20" alt="Кто живет в лесу">
+                <p>Автор</p>
+              </div>
+            </li>
+            <li class="catalog-game">
+              <a href="game.html">
+                <h3>
+                  <span class="catalog-game-title">Название игры</span>
+                </h3>
+                <p class="catalog-game-image">
+                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" alt="Кто живет в лесу">
+                </p>
+              </a>
+              <p class="catalog-game-tags">Теги</p>
+              <div class="catalog-game-autor">
+                <img src="./img/avatar/001.png" width="20" alt="Кто живет в лесу">
+                <p>Автор</p>
+              </div>
+            </li>
+          </ul>
           <button class="button" type="button">Показать еще</button>
         </section>
 
         <section class="favourites-games">
+          <h2>Избранное</h2>
+          <ul class="catalog-list">
+            <li class="catalog-game">
+              <a href="game.html">
+                <h3>
+                  <span class="catalog-game-title">Название игры</span>
+                </h3>
+                <p class="catalog-game-image">
+                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" alt="Кто живет в лесу">
+                </p>
+              </a>
+              <p class="catalog-game-tags">Теги</p>
+              <div class="catalog-game-autor">
+                <img src="./img/avatar/001.png" width="20" alt="Кто живет в лесу">
+                <p>Автор</p>
+              </div>
+            </li>
+            <li class="catalog-game">
+              <a href="game.html">
+                <h3>
+                  <span class="catalog-game-title">Название игры</span>
+                </h3>
+                <p class="catalog-game-image">
+                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" alt="Кто живет в лесу">
+                </p>
+              </a>
+              <p class="catalog-game-tags">Теги</p>
+              <div class="catalog-game-autor">
+                <img src="./img/avatar/001.png" width="20" alt="Кто живет в лесу">
+                <p>Автор</p>
+              </div>
+            </li>
+            <li class="catalog-game">
+              <a href="game.html">
+                <h3>
+                  <span class="catalog-game-title">Название игры</span>
+                </h3>
+                <p class="catalog-game-image">
+                  <img src="./img/gamesLogo/gameLogo.jpg" width="220" alt="Кто живет в лесу">
+                </p>
+              </a>
+              <p class="catalog-game-tags">Теги</p>
+              <div class="catalog-game-autor">
+                <img src="./img/avatar/001.png" width="20" alt="Кто живет в лесу">
+                <p>Автор</p>
+              </div>
+            </li>
+          </ul>
           <div>
             <button class="button" type="button">Показать еще</button>
             <a class="button" href="catalog.html">Мое избранное</a>
@@ -97,14 +225,48 @@
   
       <footer class="footer main-footer">
         <div class="footer-container">
-          <section class="footer-contacts">
+          <section class="footer-menu">
+            <h2 class="visually-hidden">Навигация</h2>
+            <ul>
+              <li class="footer-menu-item">
+                <a href="blank.html">Родителям</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="blank.html">Воспитателям и педагогам</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="blank.html">Детскому саду или школе</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="blank.html">Корпоративным клиентам</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="blank.html">Инвесторам</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="blank.html">Поддержка</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="blank.html">Лицензионное соглашение</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="blank.html">Политика по обработке персональных данных</a>
+              </li>
+            </ul>
+          </section>
 
+          <section class="footer-payment">
+            <h2 class="visually-hidden">Методы оплаты</h2>
+          </section>
+
+          <section class="footer-contacts">
+            <h2 class="visually-hidden">Копирайт</h2>
           </section>
         </div>
       </footer>
     </div>
 
-    <script src="***.js"></script>
+    <script src="./js/script.js"></script>
 
   </body>
 </html>
