Стилизация главной страницы
Добавила остальные страницы-заглушки

--- a/index.html
+++ b/index.html
@@ -407,28 +407,28 @@
             <h2 class="visually-hidden">Навигация</h2>
             <ul class="footer-menu-list">
               <li class="footer-menu-item">
-                <a href="blank.html">Родителям</a>
+                <a href="parents.html">Родителям</a>
               </li>
               <li class="footer-menu-item">
-                <a href="blank.html">Воспитателям и педагогам</a>
+                <a href="educators.html">Воспитателям и педагогам</a>
               </li>
               <li class="footer-menu-item">
-                <a href="blank.html">Детскому саду или школе</a>
+                <a href="school.html">Детскому саду или школе</a>
               </li>
               <li class="footer-menu-item">
-                <a href="blank.html">Корпоративным клиентам</a>
+                <a href="enterprise.html">Корпоративным клиентам</a>
               </li>
               <li class="footer-menu-item">
-                <a href="blank.html">Инвесторам</a>
+                <a href="investors.html">Инвесторам</a>
               </li>
               <li class="footer-menu-item">
-                <a href="blank.html">Поддержка</a>
+                <a href="mailto:help@mnemotech.ru">Поддержка</a>
               </li>
               <li class="footer-menu-item">
-                <a href="blank.html">Лицензионное соглашение</a>
+                <a href="license.html">Лицензионное соглашение</a>
               </li>
               <li class="footer-menu-item">
-                <a href="blank.html">Политика по обработке персональных данных</a>
+                <a href="dataPolicy.html">Политика по обработке персональных данных</a>
               </li>
             </ul>
           </section>
