--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <button class="button-new-games button" type="button">Показать еще</button>
           </section>
   
-          <section class="favourites-games">
+          <!-- <section class="favourites-games">
             <h2>Избранное</h2>
             <ul class="catalog-list">
               <li class="game-item">
@@ -399,29 +399,35 @@
               <button class="button" type="button">Показать еще</button>
               <a class="button" href="catalog.html">Мое избранное</a>
             </div>
-          </section>
+          </section> -->
         </div>
       </main>
   
       <footer class="footer">
-        <div class="footer-container">
+        <div class="footer-main-container">
           <section class="footer-menu">
             <h2 class="visually-hidden">Навигация</h2>
             <ul class="footer-menu-list">
               <li class="footer-menu-item">
-                <a href="parents.html">Родителям</a>
+                <a href="forParents.html">Родителям</a>
               </li>
               <li class="footer-menu-item">
-                <a href="educators.html">Воспитателям и педагогам</a>
+                <a href="forEducators.html">Воспитателям и педагогам</a>
               </li>
               <li class="footer-menu-item">
-                <a href="school.html">Детскому саду или школе</a>
+                <a href="forSchool.html">Детскому саду или школе</a>
               </li>
               <li class="footer-menu-item">
-                <a href="enterprise.html">Корпоративным клиентам</a>
+                <a href="forEnterprise.html">Корпоративным клиентам</a>
               </li>
               <li class="footer-menu-item">
-                <a href="investors.html">Инвесторам</a>
+                <a href="forInvestors.html">Инвесторам</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="about.html">О нас</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="aboutEducators.html">Наши педагоги</a>
               </li>
             </ul>
           </section>
@@ -439,17 +445,17 @@
           </section>
         </div>
 
-        <div class="footer-container">
+        <div class="footer-support-container">
           <section class="menu-support">
             <h2 class="visually-hidden">Навигация</h2>
-            <ul class="footer-menu-list">
-              <li class="footer-menu-item">
+            <ul class="menu-support-list">
+              <li class="menu-support-item">
                 <a href="mailto:help@mnemotech.ru">Поддержка</a>
               </li>
-              <li class="footer-menu-item">
+              <li class="menu-support-item">
                 <a href="license.html">Лицензионное соглашение</a>
               </li>
-              <li class="footer-menu-item">
+              <li class="menu-support-item">
                 <a href="dataPolicy.html">Политика по обработке персональных данных</a>
               </li>
             </ul>
