--- a/about.html
+++ b/about.html
@@ -37,7 +37,23 @@
       </header>
       
       <main>
-        <h1>О нас</h1>
+        <div class="wrapper-standard">
+          <h1>О нас</h1>
+          <section>
+            <h2>История проекта</h2>
+            <p>Краткое описание платформы, ее перспектив, целей и возможностей</p>
+          </section>
+
+          <section>
+            <h2>Команда</h2>
+            <p>Краткое описание нашей команды</p>
+          </section>
+
+          <section>
+            <h2>Партнерам и инвесторам</h2>
+            <p>Краткая информация и ссылки на контенты для: инвесторов, детских садов и иных учреждений, партнерства с иными организациями</p>
+          </section>
+        </div>
       </main>
 
       <footer class="footer">
