--- a/about.html
+++ b/about.html
@@ -36,20 +36,20 @@
         </nav>
       </header>
       
-      <main>
+      <main class="main-container">
         <div class="wrapper-standard">
-          <h1>О нас</h1>
-          <section>
+          <h1 class="page-title">О нас</h1>
+          <section class="project-history">
             <h2>История проекта</h2>
             <p>Краткое описание платформы, ее перспектив, целей и возможностей</p>
           </section>
 
-          <section>
+          <section class="our-team">
             <h2>Команда</h2>
             <p>Краткое описание нашей команды</p>
           </section>
 
-          <section>
+          <section class="for-partners">
             <h2>Партнерам и инвесторам</h2>
             <p>Краткая информация и ссылки на контенты для: инвесторов, детских садов и иных учреждений, партнерства с иными организациями</p>
           </section>
