--- a/help.html
+++ b/help.html
@@ -36,8 +36,19 @@
         </nav>
       </header>
 
-      <main>
-        <h1>Как это работает</h1>
+      <main class="main-container">
+        <div class="wrapper-standard">
+          <h1 class="page-title">Как это работает</h1>
+          <section class="">
+            <h2>Мнемотехника - о методике</h2>
+            <p></p>
+          </section>
+
+          <section class="">
+            <h2>Полезные статьи</h2>
+            <p></p>
+          </section>
+        </div>
       </main>
 
       <footer class="footer">
