--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </header>
       
       <main class="main-container">
-        <div class="wrapper-main">
+        <div class="wrapper-standard">
           <section class="slider">
             <h1 class="visually-hidden">Слайдер</h1>
             <ul class="slider-list">
