--- a/catalog.html
+++ b/catalog.html
@@ -36,8 +36,273 @@
         </nav>
       </header>
 
-      <main>
-        <h1>Все игры</h1>
+      <main class="main-container">
+        <div class="wrapper-standard">
+          <h1 class="page-title">Каталог игр</h1>
+          <section class="catalog">
+            <ul class="catalog-list">
+              <li class="card-item">
+                <a href="game.html">
+                  <img class="game-image" src="./img/gamesLogo/gameLogo.jpg" alt="Кто живет в лесу">
+                </a>
+                <div class="game-header">
+                  <p class="visual-rating">
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                  </p>
+                  <h3 class="game-title">
+                    <span>Название игры</span>
+                  </h3>
+                  <p class="game-tags">Теги (что игра поможет тренировать)</p>
+                </div>
+                <div class="game-autor">
+                  <img class="avatar" src="./img/avatar/001.png" alt="Фото автора">
+                  <h3>ФИО автора</h3>
+                  <p>Автор</p>
+                </div>
+                <div class="card-footer">
+                  <div class="game-price">
+                    <p class="text">Price</p>
+                    <p>$240</p>
+                  </div>
+                  <div class="game-favorite">
+                    <img src="./img/star.svg" alt="В избранном">
+                    <p>в избранное</p>
+                  </div>
+                </div>
+              </li>
+              <li class="card-item">
+                <a href="game.html">
+                  <img class="game-image" src="./img/gamesLogo/gameLogo.jpg" alt="Кто живет в лесу">
+                </a>
+                <div class="game-header">
+                  <p class="visual-rating">
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                  </p>
+                  <h3 class="game-title">
+                    <span>Название игры</span>
+                  </h3>
+                  <p class="game-tags">Теги (что игра поможет тренировать)</p>
+                </div>
+                <div class="game-autor">
+                  <img class="avatar" src="./img/avatar/001.png" alt="Фото автора">
+                  <h3>ФИО автора</h3>
+                  <p>Автор</p>
+                </div>
+                <div class="card-footer">
+                  <div class="game-price">
+                    <p class="text">Price</p>
+                    <p>$240</p>
+                  </div>
+                  <div class="game-favorite">
+                    <img src="./img/star.svg" alt="В избранном">
+                    <p>в избранное</p>
+                  </div>
+                </div>
+              </li>
+              <li class="card-item">
+                <a href="game.html">
+                  <img class="game-image" src="./img/gamesLogo/gameLogo.jpg" alt="Кто живет в лесу">
+                </a>
+                <div class="game-header">
+                  <p class="visual-rating">
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                  </p>
+                  <h3 class="game-title">
+                    <span>Название игры</span>
+                  </h3>
+                  <p class="game-tags">Теги (что игра поможет тренировать)</p>
+                </div>
+                <div class="game-autor">
+                  <img class="avatar" src="./img/avatar/001.png" alt="Фото автора">
+                  <h3>ФИО автора</h3>
+                  <p>Автор</p>
+                </div>
+                <div class="card-footer">
+                  <div class="game-price">
+                    <p class="text">Price</p>
+                    <p>$240</p>
+                  </div>
+                  <div class="game-favorite">
+                    <img src="./img/star.svg" alt="В избранном">
+                    <p>в избранное</p>
+                  </div>
+                </div>
+              </li>
+              <li class="card-item">
+                <a href="game.html">
+                  <img class="game-image" src="./img/gamesLogo/gameLogo.jpg" alt="Кто живет в лесу">
+                </a>
+                <div class="game-header">
+                  <p class="visual-rating">
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                  </p>
+                  <h3 class="game-title">
+                    <span>Название игры</span>
+                  </h3>
+                  <p class="game-tags">Теги (что игра поможет тренировать)</p>
+                </div>
+                <div class="game-autor">
+                  <img class="avatar" src="./img/avatar/001.png" alt="Фото автора">
+                  <h3>ФИО автора</h3>
+                  <p>Автор</p>
+                </div>
+                <div class="card-footer">
+                  <div class="game-price">
+                    <p class="text">Price</p>
+                    <p>$240</p>
+                  </div>
+                  <div class="game-favorite">
+                    <img src="./img/star.svg" alt="В избранном">
+                    <p>в избранное</p>
+                  </div>
+                </div>
+              </li>
+              <li class="card-item">
+                <a href="game.html">
+                  <img class="game-image" src="./img/gamesLogo/gameLogo.jpg" alt="Кто живет в лесу">
+                </a>
+                <div class="game-header">
+                  <p class="visual-rating">
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                  </p>
+                  <h3 class="game-title">
+                    <span>Название игры</span>
+                  </h3>
+                  <p class="game-tags">Теги (что игра поможет тренировать)</p>
+                </div>
+                <div class="game-autor">
+                  <img class="avatar" src="./img/avatar/001.png" alt="Фото автора">
+                  <h3>ФИО автора</h3>
+                  <p>Автор</p>
+                </div>
+                <div class="card-footer">
+                  <div class="game-price">
+                    <p class="text">Price</p>
+                    <p>$240</p>
+                  </div>
+                  <div class="game-favorite">
+                    <img src="./img/star.svg" alt="В избранном">
+                    <p>в избранное</p>
+                  </div>
+                </div>
+              </li>
+              <li class="card-item">
+                <a href="game.html">
+                  <img class="game-image" src="./img/gamesLogo/gameLogo.jpg" alt="Кто живет в лесу">
+                </a>
+                <div class="game-header">
+                  <p class="visual-rating">
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                    <svg class="star-none star-yellow" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9.002 0L11.128 6.494H18.005L12.441 10.506L14.566 17L9.002 12.987L3.438 17L5.564 10.506L0 6.494H6.878L9.002 0Z" fill="#ffe600"/>
+                    </svg>
+                  </p>
+                  <h3 class="game-title">
+                    <span>Название игры</span>
+                  </h3>
+                  <p class="game-tags">Теги (что игра поможет тренировать)</p>
+                </div>
+                <div class="game-autor">
+                  <img class="avatar" src="./img/avatar/001.png" alt="Фото автора">
+                  <h3>ФИО автора</h3>
+                  <p>Автор</p>
+                </div>
+                <div class="card-footer">
+                  <div class="game-price">
+                    <p class="text">Price</p>
+                    <p>$240</p>
+                  </div>
+                  <div class="game-favorite">
+                    <img src="./img/star.svg" alt="В избранном">
+                    <p>в избранное</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <button class="button-new-games button" type="button">Показать еще</button>
+          </section> 
+        </div>
       </main>
 
       <footer class="footer">
